# task-aware-robot-data-selection

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
configs/: episode_selection_bc.yaml
docs/: episode_selection_bc.md
episode_selection/: __init__.py  bc.py  budgets.py  data.py  embeddings.py  metadata.py  metrics.py  pareto.py  plotting.py  quality.py  results.py  runner.py  selectors.py
examples/smoke/: README.md
scripts/: analyze_episode_selection_results.py  run_episode_selection_experiment.py
tests/: test_episode_selection_budgets.py  test_episode_selection_data.py  test_episode_selection_metadata.py  test_episode_selection_metrics.py  test_episode_selection_pareto.py  test_episode_selection_quality.py  test_episode_selection_results.py  test_episode_selection_selectors.py  test_episode_selection_smoke.py
